@@ -1,0 +1,54 @@
+continue
+Horse.find(2).bookings.last
+Horse.find(5).bookings.last
+Horse.find(5).bookings
+Horse.find(2).bookings.last
+Horse.find(2).bookings
+Horse.last.bookings
+Horse.last.bookings.last
+horse.bookings
+horse.booking
+data[:start_date].to_date - horse.bookings
+data[:start_date].to_date
+Date.new(data[:start_date])
+data[:start_date]
+~params
+continue
+params["/horses"][:location]
+params["/horses"]
+params[:/horses]
+params[/horses]
+params
+"/horses"
+continue
+data[:start_date]
+Date.new(data[:start_date])
+data[:start_date].class
+data[:start_date]
+next
+continue
+data[:location]
+data.location
+data
+continue
+next
+s.class
+s
+continue
+search_data[:start_date].empty?
+search_data[:start_date].nil?
+search_data[:start_date]
+continue
+@horse_search
+next
+search_data[:location]
+search_data
+next
+search_data
+next
+continue
+search_data
+search[data]
+params[:location]
+continue
+params[:location]
