@@ -2,3 +2,4 @@
 @import "home";
 @import "team";
 @import "horse_show";
+@import "search_bar";
