@@ -1,0 +1,3 @@
+.search {
+  margin-top: 10px;
+}
