@@ -4,14 +4,18 @@ class HorsesController < ApplicationController
   skip_before_action :authenticate_user!, only: [:index, :show]
 
   def index
-    if params[:location]
-      @horse_search = search(params[:location], params[:rayon])
+    data = {}
+    unless params["/horses"].nil?
+      data = params["/horses"]
+    end
+    if data[:location]
+      search_data = {location: data[:location], rayon: data[:rayon], start_date: data[:start_date], end_date: data[:end_date]}
+      @horse_search = search(search_data)
       else
       @horse_search = Horse.all.order('created_at DESC')
     end
 
     @horses = Horse.where.not(latitude: nil, longitude: nil)
-
     @hash = Gmaps4rails.build_markers(@horses) do |horse, marker|
       marker.lat horse.latitude
       marker.lng horse.longitude
@@ -63,8 +67,18 @@ class HorsesController < ApplicationController
     @horses = Horse.all
   end
 
-  def search(location, rayon)
-    return horse_search = Horse.near(location, rayon)
+  def search(data)
+    return horse_search = Horse.near(data[:location], data[:rayon]) if data[:start_date].empty? && data[:end_date].empty?
+    horses = Horse.near(data[:location], data[:rayon])
+    horse_search = []
+    horses.each do |horse|
+      horse.bookings.each do |booking|
+        unless data[:start_date].to_date.between?(booking.start_date, booking.end_date) || data[:end_date].to_date.between?(booking.start_date, booking.end_date)
+          horse_search << horse
+        end
+      end
+    end
+    return horse_search
   end
 
   def horse_params
