@@ -1,4 +1,4 @@
-<%= render 'shared/search_bar' %>
+<%= render 'shared/search_bar_v2' %>
 <div class="content">
   <div class="container">
   <h1 class = "text-center" >Nos beaux chevaux</h1>
