@@ -2,7 +2,7 @@
   <div class="banner-content">
     <h1>Trouver une demi-pension</h1>
     <p>N'aura jamais été aussi simple</p>
-    <a class="btn btn-danger btn-lg">Entrez dans l'écurie :)</a>
+    <%= link_to "Entrez dans l'écurie :)", horses_path, class:"btn btn-danger btn-lg" %>
   </div>
 </div>
 
