@@ -1,0 +1,39 @@
+<div class="search">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-10 col-md-offset-1">
+          <div class="form-section">
+            <div class="row">
+              <%= form_for horses_path, :method => "get" do |f| %>
+                <div class="col-md-2">
+                  <%= f.label :location, "Where ?" %>
+                  <%= f.text_field :location, :autofocus => true %>
+                </div>
+                <div class="col-md-1">
+                  <%= f.label :rayon, "Rayon" %>
+                  <%= f.text_field :rayon, value: 20 %>
+                </div>
+                <div class="col-md-4">
+                  <div class="input-group">
+                    <%= f.label :start_date %>
+                    <%= f.date_field :start_date %>
+                    <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+                  </div>
+                </div>
+                <div class="col-md-4">
+                  <div class="input-group">
+                    <%= f.label :end_date %>
+                    <%= f.date_field :end_date %>
+                    <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+                  </div>
+                  </div>
+                <div class="col-md-1">
+                  <%= f.submit "Search" %>
+                </div>
+              <% end %>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
